C2 crash: assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded

XMLWordPrintable

    • b27
    • Verified

        Test: java/util/logging/Logger/getGlobal/TestGetGlobalConcurrent.java

        Running in tier 8.

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S77892/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/19f544fc-d867-4a90-abc2-f6e7fed84813/runs/adc1f9c1-658a-41d9-81f1-d2d6a59d7caa/workspace/open/src/hotspot/share/ci/ciInstanceKlass.cpp:54), pid=27544, tid=27557
        # assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded
        #
        # JRE version: Java(TM) SE Runtime Environment (12.0) (fastdebug build 12-internal+0-jdk12-jdk.1115)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-internal+0-jdk12-jdk.1115, compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x88e29a] ciInstanceKlass::ciInstanceKlass(Klass*)+0x52a

              Assignee:
              Coleen Phillimore
              Reporter:
              David Holmes
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: