8215575: C2 crash: assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded

Set InstanceKlass::loaded before adding classes to the subklass list, which can be read concurrently by the compiler.

Reviewed-by: dholmes, eosterlund